--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,9 @@ content/src/main/content/jcr_root/.content.xml
 content/src/main/content/jcr_root/apps/.content.xml
 content/src/main/content/jcr_root/etc/.content.xml
 content/src/main/content/jcr_root/etc/designs/.content.xml
-content/src/main/content/jcr_root/etc/clientlibs/.content.xml
+content/src/main/content/jcr_root/etc/clientlibs/.content.x
+
+#ui.tests
+/ui.tests/node_modules/
+/ui.tests/mochawesome-report/
+/ui.tests/test/results/
