ui.tests conventions and re-org

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@ content/src/main/content/jcr_root/etc/clientlibs/.content.x
 #ui.tests
 /ui.tests/node_modules/
 /ui.tests/mochawesome-report/
-/ui.tests/test/results/
+/ui.tests/test/results/*
