ui.tests - refactor

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ content/src/main/content/jcr_root/etc/designs/.content.xml
 content/src/main/content/jcr_root/etc/clientlibs/.content.x
 
 #ui.tests
-/ui.tests/node_modules/
-/ui.tests/mochawesome-report/
-/ui.tests/test/results/*
+ui.tests/node_modules/
 ui.tests/npm-debug.log
+ui.tests/report/
