--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,6 @@ content/src/main/content/jcr_root/etc/designs/.content.xml
 content/src/main/content/jcr_root/etc/clientlibs/.content.xml
 
 #ui.tests
-ui.tests/node_modules/
-ui.tests/npm-debug.log
-ui.tests/report/
+/ui.tests/node_modules/
+/ui.tests/npm-debug.log
+/ui.tests/report/
