--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ content/src/main/content/jcr_root/etc/clientlibs/.content.xml
 /ui.tests/node_modules/
 /ui.tests/npm-debug.log
 /ui.tests/report/
+ui.tests/test/results
