--- a/ui.tests.content/pom.xml
+++ b/ui.tests.content/pom.xml
@@ -45,59 +45,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.compendium</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.day.commons</groupId>
-			<artifactId>day-commons-jstl</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.jcr</groupId>
-			<artifactId>jcr</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.day.cq.wcm</groupId>
-			<artifactId>cq-wcm-taglib</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.sling</groupId>
-			<artifactId>org.apache.sling.scripting.jsp.taglib</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.adobe.aem</groupId>
-			<artifactId>uber-jar</artifactId>
-			<classifier>apis</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.adobe.cq</groupId>
 			<artifactId>core.wcm.components.all</artifactId>
 			<type>zip</type>
@@ -155,7 +102,7 @@
 	</build>
 	<profiles>
 		<profile>
-			<id>autoInstallPackagePublish-tests</id>
+			<id>autoInstallPackagePublish</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -180,7 +127,7 @@
 			</build>
 		</profile>
 		<profile>
-			<id>autoInstallPackage-tests</id>
+			<id>autoInstallPackage</id>
 			<build>
 				<plugins>
 					<plugin>
