SPA Editor - Sling Models conversion

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ content/src/main/content/jcr_root/etc/designs/.content.xml
 content/src/main/content/jcr_root/etc/clientlibs/.content.xml
 
 ui.tests/node_modules/
+
+#VS Code
+.history
