--- a/pom.xml
+++ b/pom.xml
@@ -184,10 +184,18 @@
             <dependency>
                 <groupId>com.adobe.aem</groupId>
                 <artifactId>uber-jar</artifactId>
-                <version>6.3.1</version>
+                <version>6.4.5</version>
                 <scope>provided</scope>
                 <classifier>apis</classifier>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.api</artifactId>
+                <version>2.20.0</version>
+                <scope>test</scope>
+            </dependency>
+            
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
